# frc668

./: .gitignore  README.md  constants.py  flywheel_tuner.py  pyproject.toml  robot.py  simgui-window.json  simgui.json  test_chassis.py  tunerbot.py
.OutlineViewer/: outlineviewer-window.json  outlineviewer.json
autonomous/: AutoHelper.py  DepotTrench.py  ShootCenter.py  ShootDepot.py  ShootDepotDriveBumps  ShootDepotDriveBumps.py  ShootDepotRotation.py  ShootOutpost.py  SmallTest.py  auto1.py  auto_base.py  auton_test.py  center_shoot_preload.py  choreo_test.py  depot_intake_shoot.py  depot_shoot_preload.py  depot_trench_get_shoot.py  get_depot_shoot.py  get_neutral_zone_from_depot_side.py  get_neutral_zone_from_outpost_side.py  get_outpost_shoot.py  neutral_zone_depot_shoot_starting_depot_side.py  neutral_zone_depot_shoot_starting_depot_side_limited_to_half_field.py  neutral_zone_depot_shoot_starting_depot_side_no_nz_parking.py  neutral_zone_outpost_intake_shoot_starting_outpost_side.py  neutral_zone_outpost_intake_shoot_starting_outpost_side_limited_to_midline.py  neutral_zone_shoot_starting_depot_side.py  neutral_zone_shoot_starting_outpose_side.py  outpost_shoot_preload.py  pathplanner_test.py  ramp_depot_shoot.py  shoot_center.py  shoot_depot.py  shoot_depot_drive_bumps.py  shoot_depot_rotation.py  shoot_outpost.py  shoot_preload_drive_neutral_zone  shoot_preload_drive_neutral_zone.py
common/: alliance.py  datalog.py  joystick.py  power_management.py
components/: flywheel.py  flywheels.py  hopper.py  indexer.py  intake.py  limelight.py  shooter.py  vision.py  (+2 more)
(+99 files in other folders)
