#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[project]
name = "frc668"
version = "0.1.0"
description = "FRC Team 668 Robot Code"
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", ".*", "build*", "dist*", "__pycache__*"]

[tool.robotpy]
# Version of robotpy this project depends on
robotpy_version = "2026.2.1"
# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    "apriltag",
    "pathplannerlib",
    "sim",
]
# Other pip packages to install
requires = [
    "phoenix6",
    "limelightlib-python==0.9.6",
]

[project.optional-dependencies]
test = [
    "pytest >= 9.0",
    "pytest-mock >= 3.14"
]

[tool.black]
line-length = 80
